--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,8 +4,8 @@ layout: default
 
 <article class="page">
 
-  <script type="text/javascript"
-    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
+  	
   </script>
 
   <h1>{{ page.title }}</h1>
